2008-06-16  Andras Varga

	* opp_msgc: added support for C99 integer types (int8_t, uint64_t, etc),
	also without "_t" suffix (int8, uint64), and for float.

	* opp_msgc: added support for @nopack field property ("don't include 
	in netPack()/netUnpack()")  [requested by Ingmar Baumgart]

	* opp_msgc: for the record, supported properties are:
	
	class properties:
	- @customize(<bool>)
	- @omitGetVerb(<bool>)

	field properties:
	- @enum(<string>)
	- @nopack(<bool>)
	- @getter(<string>)
	- @setter(<string>)
	- @sizeGetter(<string>)
	- @sizeSetter(<string>)
	- @editable(<bool>)

	field properties recognized by Tkenv inspectors:
	- @label(<string>)
	- @group(<string>)
	- @hint(<string>)

	Note: by default, getters for a field named "isFoo" is going to be 
	named "getIsFoo". To change this to "isFoo", specify @getter(isFoo)
	on the field.

2008-02-23  Andras Varga

	Summary of nedxml changes for omnetpp-4.0 (2006..2008):

	* major revision of the NED language. The most significant changes are:
	- changed to curly brace syntax
	- channels became first-class types
	- added module and channel interfaces, to formalize "like" relationships
	- added inheritance (may add/refine parametes, gates, submodules, connections)
	- added inner types (primarily to allow local channel definitions)
	- added Java-like package system and imports
	- split "numeric" parameter type to int and double
	- non-const parameters are now called volatile (const is no more)
	- expressions can now work with string and XML types as well
	- support for "like" submodule vectors where each module is of different
	  NED type (syntax: foo[5]: <> like IFoo; inifile: **.foo[*].typename = "Foo")  FIXME not implemented yet
	- added inout gates and bidirectional connections
	- the in/out "halves" of inout gates may connected independently
	- more flexible gate vectors (size can be set inside or outside the module type)
	- added conditional connection groups