@@ -236,50 +236,12 @@ sub processFile()
         print CC "template<typename T>\n";
         print CC "void doPacking(cCommBuffer *, T& t) {\n";
         print CC "    throw cRuntimeError(\"Parsim error: no doPacking() function for type %s or its base class (check .msg and _m.cc/h files!)\",opp_typename(typeid(t)));\n";
-        print CC "}\n";
+        print CC "}\n\n";
         print CC "template<typename T>\n";
         print CC "void doUnpacking(cCommBuffer *, T& t) {\n";
         print CC "    throw cRuntimeError(\"Parsim error: no doUnpacking() function for type %s or its base class (check .msg and _m.cc/h files!)\",opp_typename(typeid(t)));\n";
         print CC "}\n";
         print CC "\n";
-        print CC "// Automatically supply array (un)packing functions\n";
-        print CC "template<typename T>\n";
-        print CC "void doPacking(cCommBuffer *b, T *t, int n) {\n";
-        print CC "    for (int i=0; i<n; i++)\n";
-        print CC "        doPacking(b,t[i]);\n";
-        print CC "}\n";
-        print CC "template<typename T>\n";
-        print CC "void doUnpacking(cCommBuffer *b, T *t, int n) {\n";
-        print CC "    for (int i=0; i<n; i++)\n";
-        print CC "        doUnpacking(b,t[i]);\n";
-        print CC "}\n";
-        print CC "inline void doPacking(cCommBuffer *, cObject&) {}\n";
-        print CC "inline void doUnpacking(cCommBuffer *, cObject&) {}\n";
-        print CC "\n";
-        print CC "#define DOPACKING(T,R) \\\n";
-        print CC "    inline void doPacking(cCommBuffer *b, T R a) {b->pack(a);}  \\\n";
-        print CC "    inline void doPacking(cCommBuffer *b, T *a, int n) {b->pack(a,n);}  \\\n";
-        print CC "    inline void doUnpacking(cCommBuffer *b, T& a) {b->unpack(a);}  \\\n";
-        print CC "    inline void doUnpacking(cCommBuffer *b, T *a, int n) {b->unpack(a,n);}\n";
-        print CC "#define _\n";
-        print CC "DOPACKING(char,_)\n";
-        print CC "DOPACKING(unsigned char,_)\n";
-        print CC "DOPACKING(bool,_)\n";
-        print CC "DOPACKING(short,_)\n";
-        print CC "DOPACKING(unsigned short,_)\n";
-        print CC "DOPACKING(int,_)\n";
-        print CC "DOPACKING(unsigned int,_)\n";
-        print CC "DOPACKING(long,_)\n";
-        print CC "DOPACKING(unsigned long,_)\n";
-        print CC "DOPACKING(float,_)\n";
-        print CC "DOPACKING(double,_)\n";
-        print CC "DOPACKING(long double,_)\n";
-        print CC "DOPACKING(char *,_)\n";
-        print CC "DOPACKING(const char *,_)\n";
-        print CC "DOPACKING(opp_string,&)\n";
-        print CC "//DOPACKING(std::string,&)\n"; #TBD add it after cCommBuffer support is done
-        print CC "#undef _\n";
-        print CC "#undef DOPACKING\n";
     }
     print CC "\n\n";
 
